Additions to the parallel algorithms.

--- a/source/tit/core/CMakeLists.txt
+++ b/source/tit/core/CMakeLists.txt
@@ -44,6 +44,7 @@ add_tit_library(
     "par/control.cpp"
     "par/control.hpp"
     "par/memory_pool.hpp"
+    "par/partitioner.hpp"
     "par/task_group.hpp"
     "profiler.cpp"
     "profiler.hpp"
