Implement a custom K-way graph partitioner.
HEM may be broken.

--- a/source/tit/core/CMakeLists.txt
+++ b/source/tit/core/CMakeLists.txt
@@ -26,6 +26,7 @@ add_tit_library(
     "containers/boost.hpp"
     "containers/mdvector.hpp"
     "containers/multivector.hpp"
+    "containers/priority_queue.hpp"
     "enum_utils.hpp"
     "exception.cpp"
     "exception.hpp"
@@ -94,6 +95,7 @@ add_tit_executable(
     "_vec/vec.test.cpp"
     "containers/mdvector.test.cpp"
     "containers/multivector.test.cpp"
+    "containers/priority_queue.test.cpp"
     "enum_utils.test.cpp"
     "math.test.cpp"
     "meta.test.cpp"
