--- a/source/tit/graph/CMakeLists.txt
+++ b/source/tit/graph/CMakeLists.txt
@@ -7,11 +7,16 @@ add_tit_library(
   NAME
     graph
   SOURCES
+    "coarsen.hpp"
     "graph.hpp"
-    "simple_partition.hpp"
+    "partition.hpp"
+    "partition/greedy.hpp"
+    "partition/multilevel.hpp"
+    "partition/simple.hpp"
+    "refine.hpp"
+    "utils.hpp"
   DEPENDS
     tit::core
-    metis
 )
 
 # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
@@ -20,6 +25,13 @@ add_tit_executable(
   NAME
     graph_tests
   SOURCES
+    "coarsen.test.cpp"
+    "graph.test.cpp"
+    "partition/greedy.test.cpp"
+    "partition/multilevel.test.cpp"
+    "partition/simple.test.cpp"
+    "refine.test.cpp"
+    "utils.test.cpp"
   DEPENDS
     tit::graph
     tit::testing
