--- a/source/pytit/data/CMakeLists.txt
+++ b/source/pytit/data/CMakeLists.txt
@@ -3,17 +3,31 @@
 # Commercial use, including SaaS, requires a separate license, see /LICENSE.md
 # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
-install(
-  FILES
-    "__init__.py"
+
+add_tit_library(
+  NAME
+    data
+  TYPE
+    MODULE
+  SUFFIX
+    ".so"
+  SOURCES
+    "data.cpp"
+  DEPENDS
+    tit::data
+    tit::py_module
   DESTINATION
-    "python/pytit"
+    "python/pytit/data"
 )
 
 # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
-add_subdirectory("data")
-add_subdirectory("paraview")
-add_subdirectory("utils")
+install(
+  FILES
+    "__init__.py"
+    "data.pyi"
+  DESTINATION
+    "python/pytit/data"
+)
 
 # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
