--- a/tests/pytit/CMakeLists.txt
+++ b/tests/pytit/CMakeLists.txt
@@ -3,4 +3,11 @@
 # Commercial use, including SaaS, requires a separate license, see /LICENSE.md
 # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
+add_tit_test(
+  NAME "pytit/export_csv"
+  INPUT_FILES "test.py" "input.ttdb"
+  MATCH_FILES "output.csv.checksum"
+  COMMAND titback "test.py"
+)
+
 # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
